force-app/main/default/objects/Anime__c/fields/episodes__c.field-meta.xml
<CustomField>
    <fullName>episodes__c</fullName>
    <label>episodes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>