force-app/main/default/objects/Anime__c/fields/genre__c.field-meta.xml
<CustomField>
    <fullName>genre__c</fullName>
    <label>genre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>